pkg/gox/testdata/errors/qualified_blank_alias.gox
package demo

import _ "github.com/example/app/internal/ui"

func View() any {
	return <_.Header />
}
